--- a/workflow-templates/Alight-cicd.yaml
+++ b/workflow-templates/Alight-cicd.yaml
@@ -5,12 +5,6 @@ on:
     branches:
       - main
       - develop
-
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Run a one-line script
-        run: echo starter workflow
+  cicd-pipeline:
+    uses: AlightEngineering/Alight-Digital-Architecture_CI-Pipeline/.github/workflows/cicd.yaml@main
