--- a/workflow-templates/Alight-cicd-build.yaml
+++ b/workflow-templates/Alight-cicd-build.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - develop
 jobs:
   cicd-pipeline:
-    uses: AlightEngineering/Alight-Digital-Architecture_CI-Pipeline/.github/workflows/cicd.yaml@main
+    uses: AlightEngineering/Alight-Digital-Architecture_CI-Pipeline/.github/workflows/build-pipeline.yaml@main
