--- a/workflow-templates/Angular-QC-PROD-Trigger.yaml
+++ b/workflow-templates/Angular-QC-PROD-Trigger.yaml
@@ -1,5 +1,5 @@
 name: Alight Organization QC/PROD Angular Deploy Pipeline
-run-name: QC/PROD Angular Deploy Pipeline for ${{ inputs.tag }} 
+run-name: ${{ inputs.lifecycle }} Deploy Pipeline for ${{ inputs.tag }} 
 on:
   workflow_dispatch:
     inputs:
