--- a/workflow-templates/Angular-Hotfix-Deploy-Pipeline.yaml
+++ b/workflow-templates/Angular-Hotfix-Deploy-Pipeline.yaml
@@ -1,5 +1,5 @@
 name: Alight Organization Hotfix Angular Deploy Pipeline
-run-name: Hotfix deploy for ${{ github.event.client_payload.tag }}
+run-name: Deploy of ${{ github.event.client_payload.tag }} to ${{ github.event.client_payload.Lifecycle }} lifecycle
 on:
   repository_dispatch:
     types:
