Update and rename Angular-Hotfix-Deploy-Pipeline.yaml to Angular-Hotfix-Deploy.yaml

--- a/workflow-templates/Angular-Hotfix-Deploy.yaml
+++ b/workflow-templates/Angular-Hotfix-Deploy.yaml
@@ -1,4 +1,4 @@
-name: Alight Organization Hotfix Angular Deploy Pipeline
+name: Alight Org Hotfix Angular Deploy Pipeline
 run-name: Deploy of ${{ github.event.client_payload.tag }} to ${{ github.event.client_payload.Lifecycle }} lifecycle
 on:
   repository_dispatch:
