--- a/workflow-templates/Angular-Multi-WC-QC-PROD-Trigger.yaml
+++ b/workflow-templates/Angular-Multi-WC-QC-PROD-Trigger.yaml
@@ -1,4 +1,4 @@
-name: Alight Organization WC Migration Pipeline
+name: Alight Org WC QC/PROD Migration Pipeline
 run-name: WC Migration of ${{ github.event.client_payload.Tag }} to ${{ github.event.client_payload.Lifecycle }} li1fecycle
 on:
   repository_dispatch:
