--- a/workflow-templates/Angular-Multi-WC-Test-Trigger.yaml
+++ b/workflow-templates/Angular-Multi-WC-Test-Trigger.yaml
@@ -1,5 +1,5 @@
-name: Alight Organization WC Migration Pipeline
-run-name: WC Migration of ${{ github.event.client_payload.Tag }} to ${{ github.event.client_payload.Lifecycle }} li1fecycle
+name: Alight Org WC Test Migration Pipeline
+run-name: WC Migration of ${{ github.event.client_payload.Tag }} to ${{ github.event.client_payload.Lifecycle }} lifecycle
 on:
   repository_dispatch:
     types:
