--- a/workflow-templates/Angular-Multi-WC-QC-PROD-Trigger.yaml
+++ b/workflow-templates/Angular-Multi-WC-QC-PROD-Trigger.yaml
@@ -1,5 +1,5 @@
 name: Alight Org WC QC/PROD Migration Pipeline
-run-name: WC Migration of ${{ github.event.client_payload.Tag }} to ${{ github.event.client_payload.Lifecycle }} li1fecycle
+run-name: WC Migration of ${{ github.event.client_payload.Tag }} to ${{ github.event.client_payload.Lifecycle }} lifecycle
 on:
   repository_dispatch:
     types:
