--- a/workflow-templates/Angular-QC-PROD-Trigger.yaml
+++ b/workflow-templates/Angular-QC-PROD-Trigger.yaml
@@ -29,5 +29,5 @@ on:
         type: boolean
 jobs:
   QC-PROD-Angular-pipeline:
-    uses: AlightEngineering/ADA-CI-Pipeline/.github/workflows/QC-PROD-Pipeline-For-Angular.yaml@main
+    uses: AlightEngineering/ADA-CI-Pipeline/.github/workflows/QC-PROD-Pipeline-For-Angular.yaml@angular-trunk-model
     secrets: inherit
