--- a/workflow-templates/Angular-INT-Build.yaml
+++ b/workflow-templates/Angular-INT-Build.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - main-ng[0-9]+
 jobs:
   cicd-Build-pipeline:
     uses: AlightEngineering/ADA-CI-Pipeline/.github/workflows/build-pipeline.yaml@main
