--- a/workflow-templates/Angular-QA-CDN-Trigger.yaml
+++ b/workflow-templates/Angular-QA-CDN-Trigger.yaml
@@ -1,26 +1,12 @@
 name: Alight Org QA CDN Migration Pipeline
-run-name: QA CDN Migration of ${{ inputs.tag }} 
+run-name: Deploy Tag ${{ github.event.client_payload.Tag }} to Lifecycle ${{ github.event.client_payload.Lifecycle }}
+
 on:
-  workflow_dispatch:
-    inputs:
-      Type:
-        type: choice
-        description: 'Angular Type'
-        required: true 
-        options: 
-        - UPN-NG13
-        - EDVBase
-        - UpointFedDcNG13Base
-        - UPN-WC    
-      Tag:
-        description: Qa tag to be promoted to CDN.
-        required: true
-        type: string       
-      Update_TOMI:
-        description: Update TOMI.
-        required: true
-        type: boolean  
+  repository_dispatch:
+    types:
+      - AppWC-Test
+
 jobs:
   QA-Angular-pipeline:
     uses: AlightEngineering/ADA-CI-Pipeline/.github/workflows/QA-CDN-Pipeline-For-Angular.yaml@main
-    secrets: inherit  
+    secrets: inherit
